# swing-platform

./: .env.example  .gitignore  README.md  dashboard.py  packages.txt  path_fix.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  signal_tracker.py  sitecustomize.py
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
.streamlit/: config.toml
config/: streamlit_config.toml
docker/: Dockerfile  docker-compose.yml  nginx.conf
scripts/: manage.sh  vps_setup.sh
src/: __init__.py  cli.py
src/alerts/: telegram_bot.py
src/automation/: scheduler.py
src/core/: config.py  database.py  logging_config.py
src/dashboard/: async_helper.py  helpers.py
src/dashboard/pages/: __init__.py  cot_dashboard.py  dxy_dashboard.py  overview.py  performance.py  portfolio.py  seasonality.py  signal_lifecycle.py  signals.py  trade_history.py  us10y_dashboard.py  vix_dashboard.py
src/data/: market_data.py
src/risk/: risk_engine.py
src/signals/: lifecycle.py  scanner.py  scorer.py  signal_tracker.py
tests/: conftest.py  test_lifecycle.py  test_scoring.py
