[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swing-trading-platform"
version = "1.0.0"
description = "Institutional Swing Trading Platform with COT Intelligence"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "python-telegram-bot>=21.3",
    "httpx>=0.27.0",
    "aiohttp>=3.9.5",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "yfinance>=0.2.40",
    "pandas-ta>=0.3.14b",
    "scipy>=1.13.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
    "cachetools>=5.3.3",
    "redis>=5.0.5",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
